tests/baselines/reference/UnaryOperators1.errors.txt
==== tests/cases/compiler/unaryOperators1.ts (3 errors) ====
    +foo;
     ~~~
!!! unaryOperators1.ts(1,2): error TS2095: Cannot find name 'foo'.
    -bar;
     ~~~
!!! unaryOperators1.ts(2,2): error TS2095: Cannot find name 'bar'.
    ~quux;
     ~~~~
!!! unaryOperators1.ts(3,2): error TS2095: Cannot find name 'quux'.